Clean up project and secure docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
       - "9090:9090"
     environment:
       - Y_WEBSOCKET_URL=ws://ywebsocket:1234
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/wstexteditor?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-      - SPRING_DATASOURCE_USERNAME=wstext
-      - SPRING_DATASOURCE_PASSWORD=secret
+      # .env dosyasından okunacak
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      - SPRING_DATASOURCE_USERNAME=${MYSQL_USER}
+      - SPRING_DATASOURCE_PASSWORD=${MYSQL_PASSWORD}
       - SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
       - SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.MySQLDialect
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
@@ -16,6 +17,8 @@ services:
       - ywebsocket
       - mysql
     restart: unless-stopped
+    env_file:
+      - .env
 
   ywebsocket:
     build:
@@ -26,16 +29,17 @@ services:
       - PORT=1234
     ports:
       - "1234:1234"
-    restart: unless-stopped 
+    restart: unless-stopped
 
   mysql:
     image: mysql:8.0
     container_name: mysql_db
     environment:
-      - MYSQL_DATABASE=wstexteditor
-      - MYSQL_USER=wstext
-      - MYSQL_PASSWORD=secret
-      - MYSQL_ROOT_PASSWORD=rootsecret
+      # .env dosyasından okunacak
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     ports:
       - "3306:3306"
     command: ["--default-authentication-plugin=mysql_native_password"]
@@ -44,4 +48,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 10
-    restart: unless-stopped 
+    restart: unless-stopped
+    env_file:
+      - .env 
