--- a/render.yaml
+++ b/render.yaml
@@ -34,7 +34,7 @@ services:
     name: y-websocket-svc
     plan: free
     env: node
-    rootDir: ./y-websocket
-    buildCommand: "git submodule update --init --recursive && npm install"
-    startCommand: "node src/y-websocket.js"
+    # rootDir kaldırıldı, komutlar proje kökünden çalışacak
+    buildCommand: "git submodule update --init --recursive && cd y-websocket && npm install"
+    startCommand: "cd y-websocket && node src/y-websocket.js"
     healthCheckPath: "/" 
