little update for render deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,11 @@ server.servlet.encoding.force=true
 y.websocket.url=${Y_WEBSOCKET_URL:ws://localhost:1234}
 y.websocket.browser.url=${Y_WEBSOCKET_BROWSER_URL:ws://localhost:1234}
 
-# Database (defaults to H2 in-memory; override via env for MySQL)
-spring.h2.console.enabled=${H2_CONSOLE_ENABLED:true}
-spring.h2.console.path=/h2-console
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:testdb}
-spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.h2.Driver}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
-# Hibernate dialect: auto for H2, use PostgreSQL dialect in prod
-spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
+# Database (configured via environment variables)
+# Spring Boot will auto-detect the driver and dialect from the JDBC URL.
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
 # In prod consider 'validate' or 'none'
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
