--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=wsTextEditor
-server.port=9090
+server.port=${PORT:9090}
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -13,7 +13,7 @@ y.websocket.browser.url=${Y_WEBSOCKET_BROWSER_URL:ws://localhost:1234}
 
 # Database (configured via environment variables)
 # Spring Boot will auto-detect the driver and dialect from the JDBC URL.
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://${SPRING_DATASOURCE_HOST:localhost}:${SPRING_DATASOURCE_PORT:5432}/${SPRING_DATASOURCE_DB:postgres}}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
