--- a/render.yaml
+++ b/render.yaml
@@ -39,15 +39,14 @@ services:
       - key: Y_WEBSOCKET_URL
         value: "wss://y-websocket-svc.onrender.com"
 
-  # Y-Websocket Servisi
+  # Y-Websocket Servisi (Docker ile)
   - type: web
     name: y-websocket-svc
     plan: free
-    env: node
-    # rootDir kaldırıldı, komutlar proje kökünden çalışacak
-    buildCommand: "git submodule update --init --recursive && cd y-websocket && npm install"
-    startCommand: "cd y-websocket && ls -la && node src/y-websocket.js"
-    healthCheckPath: "/"
+    env: docker
+    dockerfilePath: ./y-websocket/Dockerfile
     envVars:
       - key: HOST
-        value: "0.0.0.0" 
+        value: "0.0.0.0"
+      - key: PORT
+        value: "1234" 
